--- a/packages/evmConnectors/EvmWalletconnectConnector/package.json
+++ b/packages/evmConnectors/EvmWalletconnectConnector/package.json
@@ -3,7 +3,7 @@
   "author": "Moralis",
   "version": "2.0.0-alpha.1",
   "license": "MIT",
-  "private": true,
+  "private": false,
   "main": "./lib/index.js",
   "types": "./lib/index.d.ts",
   "sideEffects": false,
