--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@types/eslint": "^8.4.1",
     "@types/estree": "^0.0.51",
     "@types/jest": "^27.4.0",
+    "@typescript-eslint/eslint-plugin": "^5.30.0",
+    "@typescript-eslint/parser": "^5.30.0",
     "add": "^2.0.6",
     "cross-env": "^7.0.3",
     "jest": "28",
