--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   },
   "scripts": {
     "build": "yarn nx run-many --target=build --all --exclude=@morlaisweb3/test-app-all",
+    "build:dev": "yarn nx run-many --target=build:dev --all --exclude=@morlaisweb3/test-app-all",
     "build:manual": "yarn clean && yarn build",
     "dev": "yarn nx run-many --target=dev --all",
     "lint": "yarn nx run-many --target=lint --all",
