--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -21,6 +21,7 @@
     "lint": "eslint . --ext .js,.ts,.tsx,jsx",
     "clean": "rm -rf lib && rm -rf lib.esm && rm -rf tsconfig.tsbuildinfo",
     "build": "rollup -c",
+    "build:dev": "dev=true rollup -c",
     "dev": "rollup -c --watch"
   },
   "devDependencies": {
@@ -35,8 +36,7 @@
     "@ethersproject/units": "^5.6.0",
     "@ethersproject/transactions": "^5.6.0",
     "@xstate/fsm": "^2.0.0",
-    "ky": "^0.30.0",
-    "ky-universal": "^0.10.1",
-    "eventemitter3": "^4.0.7"
+    "eventemitter3": "^4.0.7",
+    "axios": "^0.27.2"
   }
 }
