--- a/packages/evmConnectors/walletConnectWrapper/package.json
+++ b/packages/evmConnectors/walletConnectWrapper/package.json
@@ -13,7 +13,8 @@
   "scripts": {
     "format": "prettier . '**/*.+(js|ts|json)' --write",
     "format:check": "prettier . '**/*.+(js|ts|json)' --check",
-    "build": "webpack"
+    "build": "webpack",
+    "build:dev": "webpack"
   },
   "devDependencies": {
     "@walletconnect/types": "^1.7.8",
