--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-node-resolve": "^13.3.0",
     "@rollup/plugin-replace": "^4.0.0",
-    "@types/eslint": "^8.4.1",
+    "@typescript-eslint/eslint-plugin": "^5.27.0",
+    "@typescript-eslint/parser": "^5.27.0",
+    "eslint": "^8.17.0",
     "@types/estree": "^0.0.51",
     "@types/jest": "^27.4.0",
     "add": "^2.0.6",
