--- a/packages/evmConnectors/EvmConnectorUtils/package.json
+++ b/packages/evmConnectors/EvmConnectorUtils/package.json
@@ -8,7 +8,8 @@
   "types": "./lib/index.d.ts",
   "sideEffects": false,
   "files": [
-    "lib"
+    "lib",
+    "dist"
   ],
   "scripts": {
     "format": "prettier . '**/*.+(js|ts|json)' --write",
