--- a/demos/express-proxy/package.json
+++ b/demos/express-proxy/package.json
@@ -14,11 +14,17 @@
     "redis": "^4.2.0"
   },
   "devDependencies": {
+    "@moralisweb3/eslint-config": "^1.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.12.0",
+    "@typescript-eslint/parser": "^5.12.0",
+    "eslint": "^8.9.0",
+    "eslint-plugin-import": "^2.26.0",
     "ts-node": "^10.9.1",
     "typescript": "^4.7.4"
   },
   "scripts": {
     "dev": "ts-node src/index.ts",
-    "build": "tsc"
+    "build": "tsc",
+    "lint": "eslint --ext .js,.ts src"
   }
 }
