--- a/demos/firebase-auth/functions/package.json
+++ b/demos/firebase-auth/functions/package.json
@@ -21,8 +21,11 @@
     "firebase-functions": "^3.18.0"
   },
   "devDependencies": {
+    "@moralisweb3/eslint-config": "^1.0.0",
     "@typescript-eslint/eslint-plugin": "^5.12.0",
     "@typescript-eslint/parser": "^5.12.0",
+    "eslint": "^8.9.0",
+    "eslint-plugin-import": "^2.26.0",
     "firebase-functions-test": "^0.2.0",
     "typescript": "^4.5.4"
   },
