--- a/demos/firebase-proxy/functions/package.json
+++ b/demos/firebase-proxy/functions/package.json
@@ -22,11 +22,11 @@
     "firebase-functions-rate-limiter": "^3.9.1"
   },
   "devDependencies": {
+    "@moralisweb3/eslint-config": "^1.0.0",
     "@typescript-eslint/eslint-plugin": "^5.12.0",
     "@typescript-eslint/parser": "^5.12.0",
     "eslint": "^8.9.0",
-    "eslint-config-google": "^0.14.0",
-    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-import": "^2.26.0",
     "firebase-functions-test": "^0.2.0",
     "typescript": "^4.5.4"
   },
