--- a/demos/parse-server/package.json
+++ b/demos/parse-server/package.json
@@ -15,7 +15,10 @@
   },
   "devDependencies": {
     "@moralisweb3/eslint-config": "^1.0.0",
-    "eslint": "^8.22.0",
+    "@typescript-eslint/eslint-plugin": "^5.12.0",
+    "@typescript-eslint/parser": "^5.12.0",
+    "eslint": "^8.9.0",
+    "eslint-plugin-import": "^2.26.0",
     "mongodb-runner": "^4.9.0",
     "prettier": "^2.7.1",
     "ts-node": "^10.9.1",
