--- a/demos/supabase-auth/package.json
+++ b/demos/supabase-auth/package.json
@@ -14,7 +14,12 @@
     "uuid": "^8.3.2"
   },
   "devDependencies": {
+    "@moralisweb3/eslint-config": "^1.0.0",
     "@types/jsonwebtoken": "^8.5.8",
+    "@typescript-eslint/eslint-plugin": "^5.12.0",
+    "@typescript-eslint/parser": "^5.12.0",
+    "eslint": "^8.9.0",
+    "eslint-plugin-import": "^2.26.0",
     "ts-node": "^10.9.1",
     "typescript": "^4.7.4"
   },
