--- a/package.json
+++ b/package.json
@@ -18,11 +18,14 @@
     "add": "^2.0.6",
     "archiver": "^5.3.1",
     "cross-env": "^7.0.3",
+    "eslint": "^8.23.0",
+    "eslint-plugin-import": "^2.26.0",
     "fs-extra": "^10.1.0",
     "glob-fs": "^0.1.7",
     "jest": "28",
     "msw": "^0.43.0",
     "nx": "^14.5.10",
+    "openapi-types": "^12.0.0",
     "prettier": "^2.7.1",
     "rdme": "^7.5.0",
     "ts-jest": "^28.0.3",
@@ -54,6 +57,5 @@
       "demos/firebase-proxy/*",
       "demos/firebase-auth/*"
     ]
-  },
-  "dependencies": {}
+  }
 }
