--- a/packages/codegen/package.json
+++ b/packages/codegen/package.json
@@ -17,6 +17,8 @@
     "@types/minimist": "^1.2.2",
     "esmo": "^0.14.1",
     "inquirer-autocomplete-prompt": "^2.0.0",
-    "plop": "3.1.1"
+    "lodash": "^4.17.21",
+    "plop": "3.1.1",
+    "ts-morph": "^16.0.0"
   }
 }
