--- a/demos/parse-server-migration-react-client/tsconfig.json
+++ b/demos/parse-server-migration-react-client/tsconfig.json
@@ -1,11 +1,7 @@
 {
   "compilerOptions": {
     "target": "es5",
-    "lib": [
-      "dom",
-      "dom.iterable",
-      "esnext"
-    ],
+    "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
     "skipLibCheck": true,
     "esModuleInterop": true,
@@ -20,9 +16,7 @@
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "react-jsx",
-    "outDir": "build",
+    "outDir": "build"
   },
-  "include": [
-    "src"
-  ]
+  "include": ["src"]
 }
