--- a/demos/parse-server/tsconfig.json
+++ b/demos/parse-server/tsconfig.json
@@ -8,7 +8,8 @@
     "sourceMap": true,
     "target": "es2017",
     "rootDir": "src",
-    "esModuleInterop": true
+    "esModuleInterop": true,
+    "skipLibCheck": true
   },
   "include": ["src"]
 }
