--- a/demos/parse-server-migration-react-client/package.json
+++ b/demos/parse-server-migration-react-client/package.json
@@ -13,6 +13,7 @@
     "@types/react": "^18.0.18",
     "@types/react-dom": "^18.0.6",
     "@walletconnect/web3-provider": "^1.8.0",
+    "@web3auth/web3auth": "^2.0.2",
     "assert": "^2.0.0",
     "axios": "^0.27.2",
     "browserify-zlib": "^0.2.0",
