--- a/demos/nextjs/package.json
+++ b/demos/nextjs/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint --ext .js,.ts ."
   },
   "dependencies": {
+    "@moralisweb3/next": "^2.6.7",
     "axios": "^0.27.2",
     "eslint": "^8.22.0",
     "ethers": "5.6.9",
@@ -17,8 +18,7 @@
     "next-auth": "4.10.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "wagmi": "^0.5.11",
-    "@moralisweb3/next": "^2.6.7"
+    "wagmi": "^0.5.11"
   },
   "devDependencies": {
     "@babel/core": "^7.18.13",
@@ -27,10 +27,10 @@
     "@types/node": "18.0.6",
     "@types/react": "^18.0.18",
     "@types/react-dom": "^18.0.6",
+    "@typescript-eslint/eslint-plugin": "^5.38.1",
     "eslint": "^8.22.0",
     "eslint-config-next": "12.2.3",
-    "typescript": "4.7.4",
-    "@typescript-eslint/eslint-plugin": "^5.38.1",
-    "eslint-plugin-etc": "^2.0.2"
+    "eslint-plugin-etc": "^2.0.2",
+    "typescript": "4.7.4"
   }
 }
