--- a/packages/codegen/package.json
+++ b/packages/codegen/package.json
@@ -18,6 +18,7 @@
     "handlebars": "^4.7.7",
     "inquirer-autocomplete-prompt": "^2.0.0",
     "lodash": "^4.17.21",
-    "plop": "3.1.1"
+    "plop": "3.1.1",
+    "ts-morph": "16.0.0"
   }
 }
