--- a/packages/next/package.json
+++ b/packages/next/package.json
@@ -17,22 +17,20 @@
     "build": "tsc",
     "dev": "tsc --watch"
   },
-  "dependencies": {
-    "swr": "^1.3.0"
-  },
   "devDependencies": {
-    "next-auth": "^4.10.3",
     "moralis": "^2.6.7",
+    "next-auth": "^4.10.3",
     "next": "^12.2.5",
     "react-dom": "^18.2.0",
     "react": "^18.2.0",
+    "swr": "^1.3.0",
     "@moralisweb3/common-evm-utils": "^2.6.7",
     "@moralisweb3/common-core": "^2.6.7"
   },
   "peerDependencies": {
     "moralis": ">=2.6.7",
-    "next": "^12.2.5",
-    "next-auth": "^4.10.3",
+    "next-auth": ">=4.10.3",
+    "next": ">=12.2.5",
     "react-dom": ">=17.0.0",
     "react": ">=17.0.0"
   }
