--- a/packages/auth/package.json
+++ b/packages/auth/package.json
@@ -30,7 +30,7 @@
   "dependencies": {
     "@moralisweb3/api-utils": "^2.7.4",
     "@moralisweb3/common-core": "^2.7.4",
-    "@moralisweb3/evm-utils": "^2.7.4",
-    "@moralisweb3/sol-utils": "^2.7.4"
+    "@moralisweb3/common-evm-utils": "^2.7.4",
+    "@moralisweb3/common-sol-utils": "^2.7.4"
   }
 }
