--- a/packages/next/package.json
+++ b/packages/next/package.json
@@ -23,9 +23,7 @@
     "next": "^12.2.5",
     "react-dom": "^18.2.0",
     "react": "^18.2.0",
-    "swr": "^1.3.0",
-    "@moralisweb3/common-evm-utils": "^2.6.7",
-    "@moralisweb3/common-core": "^2.6.7"
+    "swr": "^1.3.0"
   },
   "peerDependencies": {
     "moralis": ">=2.6.7",
