--- a/packages/next/tsconfig.json
+++ b/packages/next/tsconfig.json
@@ -6,5 +6,8 @@
     "rootDir": "./src",
     "resolveJsonModule": true
   },
-  "include": ["src/**/*", "types/**/*", "src/hooks/generated/supportedPaths.json"]
+  "include": [
+    "src/**/*",
+    "types/**/*"
+  ]
 }
