--- a/packages/next/tsconfig.json
+++ b/packages/next/tsconfig.json
@@ -6,8 +6,5 @@
     "rootDir": "./src",
     "resolveJsonModule": true
   },
-  "include": [
-    "src/**/*",
-    "types/**/*"
-  ]
+  "include": ["src/**/*", "types/**/*"]
 }
