--- a/packages/next/package.json
+++ b/packages/next/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@moralisweb3/next",
   "author": "Moralis",
-  "version": "2.6.7",
+  "version": "2.7.4",
   "license": "MIT",
   "private": false,
   "main": "./lib/index.js",
@@ -18,16 +18,26 @@
     "dev": "tsc --watch"
   },
   "devDependencies": {
-    "moralis": "^2.6.7",
-    "next-auth": "^4.10.3",
-    "next": "^12.2.5",
+    "moralis": "^2.7.4",
     "react-dom": "^18.2.0",
-    "react": "^18.2.0",
+    "next-auth": "^4.16.4",
+    "next": "^13.0.3",
+    "react": "^18.2.0"
+  },
+  "dependencies": {
+    "@moralisweb3/api-utils": "^2.7.4",
+    "@moralisweb3/common-core": "^2.7.4",
+    "@moralisweb3/evm-api": "^2.7.4",
+    "@moralisweb3/common-evm-utils": "^2.7.4",
+    "@moralisweb3/common-sol-utils": "^2.7.4",
+    "@moralisweb3/auth": "^2.7.4",
+    "@moralisweb3/sol-api": "^2.7.4",
+    "axios": "^0.27.2",
     "swr": "^1.3.0"
   },
   "peerDependencies": {
-    "moralis": ">=2.6.7",
-    "next-auth": ">=4.10.3",
+    "moralis": ">=2.7.4",
+    "next-auth": ">=4.16.4",
     "next": ">=12.2.5",
     "react-dom": ">=17.0.0",
     "react": ">=17.0.0"
