--- a/packages/moralis/package.json
+++ b/packages/moralis/package.json
@@ -39,7 +39,11 @@
     "./common-core": "./lib/commonCore/index.js",
     "./streams-typings": "./lib/streamsTypings/index.js",
     "./common-evm-utils": "./lib/commonEvmUtils/index.js",
-    "./common-sol-utils": "./lib/commonSolUtils/index.js"
+    "./common-sol-utils": "./lib/commonSolUtils/index.js",
+    "./auth": "./lib/auth/index.js",
+    "./streams": "./lib/streams/index.js",
+    "./evm-api": "./lib/evmApi/index.js",
+    "./sol-api": "./lib/solApi/index.js"
   },
   "typesVersions": {
     "*": {
@@ -55,8 +59,11 @@
       "common-sol-utils": [
         "lib/commonSolUtils/index.d.ts"
       ],
-      "streams-typings": [
-        "lib/streamsTypings/index.d.ts"
+      "streams": [
+        "lib/streams/index.d.ts"
+      ],
+      "auth": [
+        "lib/auth/index.d.ts"
       ]
     }
   },
