--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -34,4 +34,4 @@ jobs:
       - name: Deploy Readme docs
         uses: readmeio/rdme@7.5.0
         with:
-          rdme: docs ./docs --version=v2.0 --key=${{ secrets.README_API_KEY }}
+          rdme: docs ./documentation/docs --version=v2.0 --key=${{ secrets.README_API_KEY }}
