--- a/.github/actions/yarn-monorepo-install/action.yml
+++ b/.github/actions/yarn-monorepo-install/action.yml
@@ -1,3 +1,5 @@
+# Reference: https://gist.github.com/belgattitude/042f9caf10d029badbde6cf9d43e400a
+
 name: 'Yarn install'
 description: 'Run yarn install with node_modules linker and cache enabled'
 
