--- a/packages/common/core/package.json
+++ b/packages/common/core/package.json
@@ -22,7 +22,7 @@
     "lint": "eslint . --ext .js,.ts,.tsx,jsx",
     "clean": "rm -rf lib && rm -rf tsconfig.tsbuildinfo && rm -rf tsconfig.build.tsbuildinfo && rm -rf ./node_modules/.cache/nx",
     "prebuild": "node -p \"'export const LIB_VERSION = ' + JSON.stringify(require('./package.json').version) + ';'\" > src/version.ts",
-    "build": "tsc -p tsconfig.build.json",
+    "build": "yarn prebuild && tsc -p tsconfig.build.json",
     "dev": "tsc --watch"
   },
   "devDependencies": {
