--- a/packages/moralis/package.json
+++ b/packages/moralis/package.json
@@ -20,6 +20,10 @@
     "smart-contracts",
     "contracts"
   ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/MoralisWeb3/Moralis-JS-SDK"
+  },
   "main": "./lib/index.js",
   "types": "./lib/index.d.ts",
   "sideEffects": false,
