--- a/demos/firebase-auth-ext/hosting/package.json
+++ b/demos/firebase-auth-ext/hosting/package.json
@@ -4,11 +4,14 @@
   "private": true,
   "dependencies": {
     "@ethersproject/providers": "^5.7.1",
-    "@moralisweb3/client-firebase-utils": "^2.8.1",
-    "@moralisweb3/client-firebase-evm-auth": "^2.8.1",
-    "@moralisweb3/client-firebase-sol-auth": "^2.8.1",
-    "@moralisweb3/client-auth-utils": "^2.8.1",
-    "@moralisweb3/client-connector-wallet-connect": "^2.8.1",
+    "@firebase/app": "^0.8.3",
+    "@firebase/app-types": "^0.9.0",
+    "@firebase/functions": "^0.9.0",
+    "@moralisweb3/client-auth-utils": "^2.9.0",
+    "@moralisweb3/client-connector-wallet-connect": "^2.9.0",
+    "@moralisweb3/client-firebase-evm-auth": "^2.9.0",
+    "@moralisweb3/client-firebase-sol-auth": "^2.9.0",
+    "@moralisweb3/client-firebase-utils": "^2.9.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -16,22 +19,27 @@
     "@types/node": "^16.11.58",
     "@types/react": "^18.0.19",
     "@types/react-dom": "^18.0.6",
+    "assert": "^2.0.0",
+    "buffer": "^6.0.3",
     "firebase": "^9.10.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "stream-browserify": "^3.0.0",
     "typescript": "^4.8.3",
-    "web-vitals": "^2.1.4",
-    "assert": "^2.0.0",
-    "buffer": "^6.0.3",
     "util": "^0.12.4",
-    "stream-browserify": "^3.0.0"
+    "web-vitals": "^2.1.4"
   },
   "devDependencies": {
-    "cross-env": "^7.0.3",
-    "react-app-rewired": "^2.2.1",
+    "@babel/core": "^7.20.5",
+    "@babel/plugin-syntax-flow": "^7.18.6",
+    "@babel/plugin-transform-react-jsx": "^7.19.0",
     "@moralisweb3/eslint-config": "^1.0.0",
-    "eslint-plugin-etc": "^2.0.2"
+    "@testing-library/dom": "^8.19.0",
+    "cross-env": "^7.0.3",
+    "eslint": "^8.29.0",
+    "eslint-plugin-etc": "^2.0.2",
+    "react-app-rewired": "^2.2.1"
   },
   "scripts": {
     "lint": "eslint --ext .js,.ts ./src",
