--- a/demos/parse-server-migration-react-client/package.json
+++ b/demos/parse-server-migration-react-client/package.json
@@ -71,6 +71,7 @@
     "cross-env": "^7.0.3",
     "eslint": "^8.29.0",
     "eslint-plugin-etc": "^2.0.2",
-    "react-app-rewired": "^2.2.1"
+    "react-app-rewired": "^2.2.1",
+    "webpack": "^5.64.4"
   }
 }
