--- a/packages/client/backendAdapter/firebase/package.json
+++ b/packages/client/backendAdapter/firebase/package.json
@@ -1,9 +1,8 @@
 {
   "name": "@moralisweb3/client-backend-adapter-firebase",
   "author": "Moralis",
-  "version": "2.8.1",
+  "version": "2.9.0",
   "license": "MIT",
-  "private": false,
   "main": "./lib/index.js",
   "types": "./lib/index.d.ts",
   "sideEffects": false,
@@ -18,14 +17,15 @@
   },
   "devDependencies": {
     "prettier": "^2.5.1",
-    "typescript": "^4.5.5"
+    "typescript": "^4.9.3"
   },
   "dependencies": {
-    "firebase": "^9.13.0",
     "@firebase/app": "^0.8.3",
-    "@firebase/functions": "^0.8.8",
+    "@firebase/app-types": "^0.9.0",
     "@firebase/auth": "^0.20.11",
-    "@moralisweb3/common-core": "^2.7.4",
-    "@moralisweb3/client-backend-adapter-utils": "^2.7.4"
+    "@firebase/functions": "^0.8.8",
+    "@moralisweb3/client-backend-adapter-utils": "^2.9.0",
+    "@moralisweb3/common-core": "^2.9.0",
+    "firebase": "^9.13.0"
   }
 }
