--- a/packages/client/backendAdapter/rest/package.json
+++ b/packages/client/backendAdapter/rest/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@moralisweb3/client-backend-adapter-rest",
   "author": "Moralis",
-  "version": "2.8.1",
+  "version": "2.9.0",
   "license": "MIT",
   "private": true,
   "main": "./lib/index.js",
@@ -18,10 +18,10 @@
   },
   "devDependencies": {
     "prettier": "^2.5.1",
-    "typescript": "^4.5.5"
+    "typescript": "^4.9.3"
   },
   "dependencies": {
-    "@moralisweb3/common-core": "^2.8.1",
-    "@moralisweb3/client-backend-adapter-utils": "^2.8.1"
+    "@moralisweb3/client-backend-adapter-utils": "^2.9.0",
+    "@moralisweb3/common-core": "^2.9.0"
   }
 }
