--- a/packages/client/backendAdapter/utils/package.json
+++ b/packages/client/backendAdapter/utils/package.json
@@ -24,6 +24,7 @@
     "dev": "tsc --watch"
   },
   "devDependencies": {
+    "jest": "29.3.1",
     "typescript": "^4.9.3"
   },
   "dependencies": {
