--- a/packages/client/client/package.json
+++ b/packages/client/client/package.json
@@ -1,9 +1,8 @@
 {
   "name": "@moralisweb3/client",
   "author": "Moralis",
-  "version": "2.8.1",
+  "version": "2.9.0",
   "license": "MIT",
-  "private": false,
   "main": "./lib/index.js",
   "types": "./lib/index.d.ts",
   "sideEffects": false,
@@ -22,12 +21,12 @@
     "typescript": "^4.5.5"
   },
   "dependencies": {
-    "@moralisweb3/common-core": "^2.7.1",
-    "@moralisweb3/client-evm-api": "^2.8.1",
-    "@moralisweb3/client-evm-auth": "^2.8.1",
-    "@moralisweb3/client-sol-api": "^2.8.1",
-    "@moralisweb3/client-sol-auth": "^2.8.1",
-    "@moralisweb3/client-backend-adapter-utils": "^2.8.1",
-    "@moralisweb3/client-backend-adapter-rest": "^2.8.1"
+    "@moralisweb3/client-backend-adapter-rest": "^2.9.0",
+    "@moralisweb3/client-backend-adapter-utils": "^2.9.0",
+    "@moralisweb3/client-evm-api": "^2.9.0",
+    "@moralisweb3/client-evm-auth": "^2.9.0",
+    "@moralisweb3/client-sol-api": "^2.9.0",
+    "@moralisweb3/client-sol-auth": "^2.9.0",
+    "@moralisweb3/common-core": "^2.7.1"
   }
 }
