--- a/packages/client/connector/walletConnect/package.json
+++ b/packages/client/connector/walletConnect/package.json
@@ -1,9 +1,8 @@
 {
   "name": "@moralisweb3/client-connector-wallet-connect",
   "author": "Moralis",
-  "version": "2.8.1",
+  "version": "2.9.0",
   "license": "MIT",
-  "private": false,
   "main": "./lib/index.js",
   "types": "./lib/index.d.ts",
   "sideEffects": false,
@@ -18,10 +17,12 @@
   },
   "devDependencies": {
     "prettier": "^2.5.1",
-    "typescript": "^4.5.5"
+    "typescript": "^4.9.3"
   },
   "dependencies": {
-    "@moralisweb3/client-evm-auth": "^2.8.1",
+    "@babel/core": "^7.20.5",
+    "@babel/plugin-transform-react-jsx": "^7.19.0",
+    "@moralisweb3/client-evm-auth": "^2.9.0",
     "@walletconnect/web3-provider": "^1.8.0"
   }
 }
