--- a/packages/client/evmAuth/package.json
+++ b/packages/client/evmAuth/package.json
@@ -1,9 +1,8 @@
 {
   "name": "@moralisweb3/client-evm-auth",
   "author": "Moralis",
-  "version": "2.8.1",
+  "version": "2.9.0",
   "license": "MIT",
-  "private": false,
   "main": "./lib/index.js",
   "types": "./lib/index.d.ts",
   "sideEffects": false,
@@ -19,13 +18,13 @@
   },
   "devDependencies": {
     "prettier": "^2.5.1",
-    "typescript": "^4.5.5"
+    "typescript": "^4.9.3"
   },
   "dependencies": {
-    "@moralisweb3/common-core": "^2.8.1",
-    "@moralisweb3/client-backend-adapter-utils": "^2.8.1",
-    "@moralisweb3/client-auth-utils": "^2.8.1",
     "@ethersproject/providers": "^5.7.1",
-    "@metamask/detect-provider": "^1.2.0"
+    "@metamask/detect-provider": "^1.2.0",
+    "@moralisweb3/client-auth-utils": "^2.9.0",
+    "@moralisweb3/client-backend-adapter-utils": "^2.9.0",
+    "@moralisweb3/common-core": "^2.9.0"
   }
 }
