--- a/packages/client/firebaseEvmAuth/package.json
+++ b/packages/client/firebaseEvmAuth/package.json
@@ -1,9 +1,8 @@
 {
   "name": "@moralisweb3/client-firebase-evm-auth",
   "author": "Moralis",
-  "version": "2.8.1",
+  "version": "2.9.0",
   "license": "MIT",
-  "private": false,
   "main": "./lib/index.js",
   "types": "./lib/index.d.ts",
   "sideEffects": false,
@@ -18,14 +17,16 @@
   },
   "devDependencies": {
     "prettier": "^2.5.1",
-    "typescript": "^4.5.5"
+    "typescript": "^4.9.3"
   },
   "dependencies": {
-    "firebase": "^9.10.0",
+    "@ethersproject/providers": "^5.7.1",
+    "@firebase/app": "^0.9.0",
+    "@firebase/app-types": "^0.9.0",
     "@firebase/auth": "^0.20.11",
-    "@moralisweb3/client-evm-auth": "^2.8.1",
-    "@moralisweb3/client-backend-adapter-utils": "^2.8.1",
-    "@moralisweb3/client-firebase-utils": "^2.8.1",
-    "@ethersproject/providers": "^5.7.1"
+    "@moralisweb3/client-backend-adapter-utils": "^2.9.0",
+    "@moralisweb3/client-evm-auth": "^2.9.0",
+    "@moralisweb3/client-firebase-utils": "^2.9.0",
+    "firebase": "^9.10.0"
   }
 }
