--- a/packages/client/firebaseSolApi/package.json
+++ b/packages/client/firebaseSolApi/package.json
@@ -1,9 +1,8 @@
 {
   "name": "@moralisweb3/client-firebase-sol-api",
   "author": "Moralis",
-  "version": "2.8.1",
+  "version": "2.9.0",
   "license": "MIT",
-  "private": false,
   "main": "./lib/index.js",
   "types": "./lib/index.d.ts",
   "sideEffects": false,
@@ -18,15 +17,16 @@
   },
   "devDependencies": {
     "prettier": "^2.5.1",
-    "typescript": "^4.5.5"
+    "typescript": "^4.9.3"
   },
   "dependencies": {
-    "firebase": "^9.10.0",
-    "@firebase/functions": "^0.8.8",
     "@firebase/app": "^0.8.3",
-    "@moralisweb3/common-core": "^2.8.1",
-    "@moralisweb3/common-sol-utils": "^2.8.1",
-    "@moralisweb3/client-sol-api": "^2.8.1",
-    "@moralisweb3/client-firebase-utils": "^2.8.1"
+    "@firebase/app-types": "^0.9.0",
+    "@firebase/functions": "^0.8.8",
+    "@moralisweb3/client-firebase-utils": "^2.9.0",
+    "@moralisweb3/client-sol-api": "^2.9.0",
+    "@moralisweb3/common-core": "^2.9.0",
+    "@moralisweb3/common-sol-utils": "^2.9.0",
+    "firebase": "^9.10.0"
   }
 }
