--- a/packages/client/firebaseUtils/package.json
+++ b/packages/client/firebaseUtils/package.json
@@ -1,9 +1,8 @@
 {
   "name": "@moralisweb3/client-firebase-utils",
   "author": "Moralis",
-  "version": "2.8.1",
+  "version": "2.9.0",
   "license": "MIT",
-  "private": false,
   "main": "./lib/index.js",
   "types": "./lib/index.d.ts",
   "sideEffects": false,
@@ -19,12 +18,13 @@
   },
   "devDependencies": {
     "prettier": "^2.5.1",
-    "typescript": "^4.5.5"
+    "typescript": "^4.9.3"
   },
   "dependencies": {
     "@firebase/app": "^0.8.3",
-    "@moralisweb3/client-backend-adapter-utils": "^2.8.1",
-    "@moralisweb3/client-backend-adapter-firebase": "^2.8.1",
-    "@moralisweb3/common-core": "^2.8.1"
+    "@firebase/app-types": "^0.9.0",
+    "@moralisweb3/client-backend-adapter-firebase": "^2.9.0",
+    "@moralisweb3/client-backend-adapter-utils": "^2.9.0",
+    "@moralisweb3/common-core": "^2.9.0"
   }
 }
