--- a/packages/client/authUtils/package.json
+++ b/packages/client/authUtils/package.json
@@ -10,6 +10,8 @@
     "lib/*"
   ],
   "scripts": {
+    "test": "yarn jest --runInBand --detectOpenHandles --forceExit --ci",
+    "test:watch": "yarn run test --watch",
     "lint": "eslint . --ext .js,.ts,.tsx,jsx",
     "clean": "rm -rf lib && rm -rf tsconfig.tsbuildinfo && rm -rf ./node_modules/.cache/nx",
     "build": "tsc",
@@ -17,8 +19,9 @@
     "gen:client": "node ../apiUtils/scripts/generate-client.js ./src/generated/ClientSolApi.ts @moralisweb3/common-sol-utils"
   },
   "devDependencies": {
+    "jest": "29.3.1",
     "prettier": "^2.5.1",
-    "typescript": "^4.5.5"
+    "typescript": "^4.9.3"
   },
   "dependencies": {
     "@moralisweb3/client-backend-adapter-utils": "^2.9.0",
