--- a/packages/create-moralis-dapp/package.json
+++ b/packages/create-moralis-dapp/package.json
@@ -22,6 +22,7 @@
   },
   "devDependencies": {
     "@types/ejs": "3.1.1",
+    "@types/node": "^18.11.15",
     "axios": "^1.2.1",
     "chalk": "^5.0.1",
     "copyfiles": "2.4.1",
@@ -30,6 +31,7 @@
     "inquirer": "^8.0.0",
     "lodash": "^4.17.21",
     "ora": "^5.4.1",
-    "ts-node-dev": "^2.0.0"
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^4.9.4"
   }
 }
