--- a/packages/express/package.json
+++ b/packages/express/package.json
@@ -16,13 +16,9 @@
     "build": "tsc",
     "dev": "tsc --watch"
   },
-  "devDependencies": {
-    "moralis": "^2.10.0"
-  },
   "dependencies": {
-    "express": "^4.18.2"
-  },
-  "peerDependencies": {
-    "moralis": ">=2.10.0"
+    "@moralisweb3/api-utils": "^2.10.0",
+    "express": "^4.18.2",
+    "moralis": "^2.10.0"
   }
 }
