--- a/demos/parse-server-migration/package.json
+++ b/demos/parse-server-migration/package.json
@@ -7,6 +7,7 @@
     "@codemirror/language": "^0.20.0",
     "@moralisweb3/common-core": "^2.10.1",
     "@moralisweb3/parse-server": "2.10.1",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "envalid": "7.3.1",
     "express": "^4.18.1",
@@ -19,6 +20,7 @@
   },
   "devDependencies": {
     "@moralisweb3/eslint-config": "^1.0.1",
+    "@types/cors": "^2.8.13",
     "@types/node": "^18.11.11",
     "@typescript-eslint/eslint-plugin": "^5.45.1",
     "@typescript-eslint/parser": "^5.45.1",
