--- a/demos/parse-server/package.json
+++ b/demos/parse-server/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@codemirror/language": "^0.20.0",
     "@moralisweb3/common-core": "^2.10.1",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "envalid": "7.3.1",
     "express": "^4.18.1",
