--- a/demos/webpack/package.json
+++ b/demos/webpack/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@moralisweb3/client": "^2.9.0",
+    "@moralisweb3/client-connector-magic-link": "^2.9.0",
     "@moralisweb3/client-connector-wallet-connect": "^2.9.0"
   },
   "devDependencies": {
