--- a/demos/webpack/package.json
+++ b/demos/webpack/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "@moralisweb3/client": "^2.11.0",
-    "@moralisweb3/client-connector-wallet-connect": "^2.11.0"
+    "@moralisweb3/client-connector-magic-link": "^2.11.0",
+    "@moralisweb3/client-connector-wallet-connect": "^2.11.0",
+    "dotenv": "^16.0.3"
   },
   "devDependencies": {
     "http-server": "^14.1.1",
