--- a/packages/client/firebaseUtils/package.json
+++ b/packages/client/firebaseUtils/package.json
@@ -21,10 +21,9 @@
     "typescript": "^4.9.3"
   },
   "dependencies": {
-    "@firebase/app": "^0.8.3",
-    "@firebase/app-types": "^0.9.0",
     "@moralisweb3/client-backend-adapter-firebase": "^2.11.0",
     "@moralisweb3/client-backend-adapter-utils": "^2.11.0",
-    "@moralisweb3/common-core": "^2.11.0"
+    "@moralisweb3/common-core": "^2.11.0",
+    "firebase": "^9.15.0"
   }
 }
