--- a/packages/client/connector/walletConnect2/package.json
+++ b/packages/client/connector/walletConnect2/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@moralisweb3/client-connector-wallet-connect",
+  "name": "@moralisweb3/client-connector-wallet-connect-2",
   "author": "Moralis",
   "version": "2.11.0",
   "license": "MIT",
@@ -23,7 +23,11 @@
     "@babel/core": "^7.20.5",
     "@babel/plugin-transform-react-jsx": "^7.19.0",
     "@moralisweb3/client-evm-auth": "^2.11.0",
-    "@walletconnect/types": "^1.8.0",
-    "@walletconnect/web3-provider": "^1.8.0"
+    "@walletconnect/auth-client": "^2.0.0",
+    "@walletconnect/qrcode-modal": "^1.8.0",
+    "@walletconnect/sign-client": "^2.1.5",
+    "@walletconnect/types": "2.1.4",
+    "@walletconnect/universal-provider": "^2.1.5",
+    "@web3modal/standalone": "^2.0.0-rc.1"
   }
 }
